--- a/Homepage.html
+++ b/Homepage.html
@@ -12,36 +12,40 @@
     <title>PeopleShare</title>
   </head>
   <body>
-    <div class="bg-img"><br>
-      <div>
-        <div class="container">
-  <div class="row">
-    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3">
-      <ul>
-      <li><a href="#">HOME</a></li>
-      </ul>
-    </div>
-    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3">
-      <ul>
-      <li><a href="#">CONTACT US</a></li>
-      </ul>
-    </div>
-    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3">
-      <ul>
-      <li><a href="#">ABOUT US</a></li>
-      </ul>
-    </div>
-    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3">
-      <ul>
-      <li><a href="#">PHOTO GALLERY</a></li>
-      </ul>
-    </div>
+    <div class="bg-img">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#"><span id="logo">PeopleDonate</span></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About Us</a>
+      </li>
+      <li class="nav-item dropdown">
+        <div id="nav"><a class="nav-link" href="#">Contact Us</a></div>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        ><a class="nav-link" href="#">Photo Gallery</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
   </div>
-</div>
-      </div>
-      <div id="taki">
-        
-      </div>
+</nav>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
