--- a/Homepage.html
+++ b/Homepage.html
@@ -37,7 +37,7 @@
         </div>
       </li>
       <li class="nav-item">
-        ><a class="nav-link" href="#">Photo Gallery</a>
+        <a class="nav-link" href="#">Photo Gallery</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
